make java 8 compilation a thing